# analytics-micro

./: .env  .gitignore  Makefile  README.md  docker-compose.pipeline.yml  docker-compose.yml
conf/: analytics.env.template  insights_env.template  mysql.env.template  pipeline.env.template
services/hadoop/: README.md
services/hadoop/base/: Dockerfile
services/hadoop/base/config/hadoop-common/: core-site.xml  hdfs-site.xml
services/hadoop/base/env/: user_vars
services/hadoop/hdfs/: Dockerfile
services/hadoop/hdfs/scripts/: hdfs-entrypoint.sh
services/hadoop/hive-server/: Dockerfile
services/hadoop/hive-server/config/: hive-log4j2.properties  hive-site.xml
services/hadoop/hive-server/scripts/: start-hive-server
services/hadoop/pipeline/: Dockerfile
services/hadoop/pipeline/misc/: patched_snakebite_client.py
services/hadoop/pipeline/requirements/: pyproject.toml
services/hadoop/pipeline/scripts/: update-insights
services/hadoop/pipeline/templates/: input.json  output.json  override.cfg
services/hadoop/spark/: Dockerfile
services/openedx/: README.md
services/openedx/api/: Dockerfile  analytics_api.yml
services/openedx/api/requirements/: pyproject.toml
services/openedx/api/settings/: analytics_micro.py
services/openedx/api/templates/: analytics_api.yml
services/openedx/base/: Dockerfile
services/openedx/base/scripts/: launch-edx-server
services/openedx/database-worker/: Dockerfile
services/openedx/database-worker/scripts/: init-mysql
services/openedx/database-worker/templates/: init_db.sql
services/openedx/insights/: Dockerfile  insights.yml
services/openedx/insights/requirements/: Makefile  package-lock.json  package.json  pyproject.toml
services/openedx/insights/settings/: analytics_micro.py
services/openedx/insights/templates/: insights.yml
services/util/: Dockerfile
services/util/scripts/: cleanshell  launch-edx-server  link-conf  sync-configs
services/util/scripts/marker/: check-marker  reset-markers  set-marker
services/web/: README.md
services/web/mysql/: Dockerfile
services/web/mysql/scripts/: render-then-start
services/web/mysql/templates/: init_db.sql
services/web/nginx/: Dockerfile
services/web/nginx/scripts/: wait-then-start
services/web/nginx/templates/: analytics_api.conf.template  insights  insights.conf.template
