[tool.poetry]
name = "edx-analytics-data-api"
version = "0.1.1"
description = ""
authors = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
authors = []

[tool.poetry.dependencies]
python = "^2.7"

"boto" = "2.42.0"
"django" = "1.11.15"
"django-countries" = "4.5"
"python-memcached" = "*"
"djangorestframework" = "*"
"django-rest-swagger" = "*"
"djangorestframework-csv" = "*"
"django-storages" = "*"
"elasticsearch-dsl" = "0.0.11"
"ordered-set" = "2.0.2"
"tqdm" = "4.11.2"
"urllib3" = "*"
"Markdown" = "2.6.6"
"edx-ccx-keys" = "<=1.0.1"
"edx-django-release-util" = "<=0.4.2"
"edx-opaque-keys" = "<=0.3.1"
"edx-django-utils" = "<=2.0.4"
"edx-rest-api-client" = "<=2.0.0"
"edx-drf-extensions" = "<=3.0.1"
"edx-enterprise-data" = "<=1.3.16"
"edx-rbac" = "<=1.0.5"
"django-typed-models" = ">=0.8"
"django-waffle" = "<=0.19.0"
"django-cors-headers" = "*"

"MySQL-python" = "1.2.5"
"PyYAML" = "*"
"gevent" = "1.0.2"
"gunicorn" = "19.6.0"
"path.py" = "8.2.1"
"newrelic" = "*"
