[tool.poetry]
name = "edx-analytics-dashboard"
version = "0.1.1"
description = ""
authors = []

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^2.7"
"awesome-slugify" = "1.6.5"
"bpython" = "0.16"
"Django" = "1.11.15"
"django-appconf" = "1.0.2"
"django-braces" = "1.11.0"
"django-countries" = "4.5"
"django-model-utils" = "2.6.1"
"django-webpack-loader" = "0.4.1"
"djangorestframework" = "3.6.3"
"djangorestframework-csv" = "2.0.0"

"django-crispy-forms" = "1.6.1"
"django-soapbox" = "1.3"
"django-waffle" = "0.12.0"
"pinax-announcements" = "2.0.4"
"edx-auth-backends" = "1.1.3"
"edx-ccx-keys" = "0.2.1"
"edx-opaque-keys" = "<=0.3.1"
"edx-django-release-util" = "0.3.1"
"edx-django-utils" = "0.4.1"
"edx-drf-extensions" = "1.6.1"
"edx-i18n-tools" = "0.4.2"
"edx-rest-api-client" = "1.8.2"
"libsass" = "0.11.1"
"logutils" = "0.3.4.1"
"requests" = "*"
"stevedore" = ">=0.14.1,<2.0.0"

"django-lang-pref-middleware" = { git = "https://github.com/edx/django-lang-pref-middleware.git", tag = "0.1.0" }
"edx-analytics-data-api-client" = { git = "https://github.com/edx/edx-analytics-data-api-client.git", tag = "0.12.0" }

"MySQL-python" = "1.2.5"
"pyyaml" = "*"
"gunicorn" = "0.17.4"
"python-memcached" = "1.58"
"nodeenv" = "1.1.2"
